mod(global): rename to InternNova(earlier InterNova)

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "private": true,
-  "name": "internova",
+  "name": "internnova",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
