--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,7 +3,6 @@
   "extends": "next/core-web-vitals",
   "rules": {
     "@next/next/no-img-element": "off",
-    "react/no-unescaped-entities": "off",
-    "quotes": [2, "single", { "avoidEscape": true }]
+    "react/no-unescaped-entities": "off"
   }
 }
