--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "blitz start",
     "studio": "blitz prisma studio",
     "lint": "eslint --ignore-path .gitignore --ext .js,.ts,.tsx .",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "start:production": "blitz start --port $PORT"
   },
   "prisma": {
     "schema": "db/schema.prisma"
