--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-dom": "alpha",
     "react-final-form": "6.5.3",
     "react-icons": "4.2.0",
+    "react-spinners": "0.11.0",
     "tailwindcss": "2.1.2",
     "zod": "3.8.2"
   },
