--- a/render.yaml
+++ b/render.yaml
@@ -1,6 +1,6 @@
 services:
   - type: web
-    name: blitzapp
+    name: internnova
     env: node
     plan: starter
     buildCommand: yarn --frozen-lockfile --prod=false &&
@@ -13,11 +13,11 @@ services:
         value: production
       - key: DATABASE_URL
         fromDatabase:
-          name: blitzapp-db
+          name: internnova-db
           property: connectionString
       - key: SESSION_SECRET_KEY
         generateValue: true
 
 databases:
-  - name: blitzapp-db
+  - name: internnova-db
     plan: starter
