--- a/package.json
+++ b/package.json
@@ -2,13 +2,11 @@
   "name": "intern-nova",
   "version": "1.0.0",
   "scripts": {
-    "dev": "blitz dev",
-    "build": "blitz build",
-    "start": "blitz start",
-    "studio": "blitz prisma studio",
-    "lint": "eslint --ignore-path .gitignore --ext .js,.ts,.tsx .",
-    "prepare": "husky install",
-    "start:production": "blitz start --port $PORT"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint",
+    "prepare": "husky install"
   },
   "prisma": {
     "schema": "db/schema.prisma"
@@ -24,30 +22,30 @@
   },
   "dependencies": {
     "@prisma/client": "2.30.3",
-    "autoprefixer": "10",
-    "blitz": "0.39.0",
     "final-form": "4.20.2",
+    "moment": "2.29.1",
+    "next": "11.1.2",
     "next-seo": "4.26.0",
-    "postcss": "8",
-    "react": "alpha",
-    "react-dom": "alpha",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
     "react-final-form": "6.5.3",
     "react-icons": "4.2.0",
-    "react-spinners": "0.11.0",
-    "tailwindcss": "2.1.2",
     "zod": "3.8.2"
   },
   "devDependencies": {
     "@types/preview-email": "2.0.1",
     "@types/react": "17.0.20",
+    "autoprefixer": "10.3.4",
     "eslint": "7.32.0",
     "husky": "6.0.0",
     "lint-staged": "10.5.4",
+    "postcss": "^7",
     "prettier": "2.3.2",
     "prettier-plugin-prisma": "0.15.0",
     "pretty-quick": "3.1.1",
     "preview-email": "3.0.5",
     "prisma": "2.30.3",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat",
     "typescript": "~4.3"
   },
   "private": true
