add: auth0 user to database

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,6 @@
 {
   "ignorePatterns": ["test/*"],
-  "extends": "next/core-web-vitals",
+  "extends": "eslint-config-next",
   "rules": {
     "@next/next/no-img-element": "off",
     "react/no-unescaped-entities": "off"
