--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "autoprefixer": "10.3.4",
     "babel-plugin-superjson-next": "0.3.1",
     "eslint": "7.32.0",
+    "eslint-config-next": "10.2.1-canary.3",
     "husky": "6.0.0",
     "lint-staged": "10.5.4",
     "postcss": "^7",
