--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@auth0/nextjs-auth0": "1.5.0",
     "@prisma/client": "2.30.3",
+    "@tailwindcss/forms": "0.3.3",
     "final-form": "4.20.2",
     "moment": "2.29.1",
     "next": "11.1.2",
