--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-final-form": "6.5.3",
+    "react-hook-form": "7.15.2",
     "react-icons": "4.2.0",
     "superjson": "1.7.5",
     "zod": "3.8.2"
