--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@auth0/nextjs-auth0": "1.5.0",
     "@prisma/client": "2.30.3",
     "@tailwindcss/forms": "0.3.3",
+    "axios": "0.21.4",
     "final-form": "4.20.2",
     "moment": "2.29.1",
     "next": "11.1.2",
