--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@auth0/nextjs-auth0": "1.5.0",
     "@prisma/client": "2.30.3",
     "@tailwindcss/forms": "0.3.3",
+    "axios": "0.21.4",
     "final-form": "4.20.2",
     "moment": "2.29.1",
     "next": "11.1.2",
@@ -31,6 +32,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-final-form": "6.5.3",
+    "react-hook-form": "7.15.2",
     "react-icons": "4.2.0",
     "superjson": "1.7.5",
     "zod": "3.8.2"
