--- a/package.json
+++ b/package.json
@@ -25,17 +25,14 @@
     "@prisma/client": "2.30.3",
     "@tailwindcss/forms": "0.3.3",
     "axios": "0.21.4",
-    "final-form": "4.20.2",
     "moment": "2.29.1",
     "next": "11.1.2",
     "next-seo": "4.26.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-final-form": "6.5.3",
     "react-hook-form": "7.15.2",
     "react-icons": "4.2.0",
-    "superjson": "1.7.5",
-    "zod": "3.8.2"
+    "superjson": "1.7.5"
   },
   "devDependencies": {
     "@types/preview-email": "2.0.1",
