--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,10 +1,6 @@
 {
-  "ignorePatterns": ["test/*"],
-  "extends": "eslint-config-next",
+  "extends": "next/core-web-vitals",
   "rules": {
-    "@next/next/no-img-element": "off",
-    "react/no-unescaped-entities": "off",
-    "react-hooks/rules-of-hooks": "off",
-    "@next/next/no-html-link-for-pages": "off"
+    "@next/next/no-img-element": "off"
   }
 }
