--- a/package.json
+++ b/package.json
@@ -1,41 +1,24 @@
 {
-  "name": "intern-nova",
-  "version": "1.0.0",
+  "name": "samraths-portfolio",
+  "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "prepare": "husky install"
-  },
-  "lint-staged": {
-    "*.{js,ts,tsx}": [
-      "eslint --fix"
-    ]
+    "lint": "next lint"
   },
   "dependencies": {
-    "@tailwindcss/forms": "0.3.3",
-    "moment": "2.29.1",
-    "next": "11.1.2",
-    "next-seo": "4.26.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-icons": "4.2.0"
+    "next": "^11.1.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
-    "@types/preview-email": "2.0.1",
-    "@types/react": "17.0.20",
+    "@types/react": "^17.0.20",
+    "autoprefixer": "^10.3.4",
     "eslint": "7.32.0",
-    "eslint-config-next": "10.2.1-canary.3",
-    "husky": "6.0.0",
-    "lint-staged": "10.5.4",
-    "postcss": "^7",
-    "prettier": "2.3.2",
-    "prettier-plugin-prisma": "0.15.0",
-    "pretty-quick": "3.1.1",
-    "preview-email": "3.0.5",
-    "prisma": "2.30.3",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat",
-    "typescript": "~4.3"
+    "eslint-config-next": "11.1.2",
+    "postcss": "^8.3.6",
+    "tailwindcss": "^2.2.15",
+    "typescript": "^4.4.3"
   }
 }
