--- a/package.json
+++ b/package.json
@@ -5,8 +5,12 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint --ext .js,ts src",
-    "prepare": "husky install",
+    "check-types": "tsc --pretty --noEmit",
+    "check-format": "prettier --check .",
+    "check-lint": "eslint . --ext ts --ext tsx --ext js",
+    "format": "prettier --write .",
+    "test-all": "yarn run check-format && yarn run check-lint && yarn run check-types && yarn run build",
+    "prepare": "husky install"
   },
   "dependencies": {
     "next": "^11.1.2",
@@ -15,8 +19,16 @@
   },
   "devDependencies": {
     "@types/react": "^17.0.20",
-    "eslint": "7.32.0",
-    "eslint-config-next": "11.1.2",
+    "@typescript-eslint/eslint-plugin": "^4.11.1",
+    "@typescript-eslint/parser": "^4.11.1",
+    "autoprefixer": "^10.3.7",
+    "eslint": "^7.17.0",
+    "eslint-config-next": "^11.1.2",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.22.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-webpack-plugin": "^2.4.1",
+    "husky": "^7.0.0",
     "postcss": "^8.3.6",
     "tailwindcss": "^2.2.15",
     "typescript": "^4.4.3"
