--- a/.github/WORKFLOWS/lint-commit.yml
+++ b/.github/WORKFLOWS/lint-commit.yml
@@ -1,5 +1,6 @@
-name: Lint Commit Messages
-on: [pull_request]
+name: lint_commit_messages
+
+on: [push, pull_request]
 
 jobs:
   commitlint:
@@ -8,4 +9,4 @@ jobs:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0
-      - uses: wagoid/commitlint-github-action@v4
+      - uses: wagoid/commitlint-github-action@v3
