--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@types/jsonwebtoken": "^8.5.5",
     "axios": "^0.23.0",
+    "jsonwebtoken": "^8.5.1",
     "next": "^11.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
