--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "eslint-webpack-plugin": "^2.4.1",
     "husky": "^7.0.0",
     "postcss": "^8.3.6",
+    "prettier": "^2.4.1",
     "prisma": "^3.3.0",
     "tailwindcss": "^2.2.15",
     "typescript": "^4.4.3"
