--- a/package.json
+++ b/package.json
@@ -40,5 +40,8 @@
     "prisma": "^3.3.0",
     "tailwindcss": "^2.2.15",
     "typescript": "^4.4.3"
+  },
+  "engines": {
+    "yarn": "1.22.17"
   }
 }
