--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@auth0/nextjs-auth0": "^1.6.1",
     "@clerk/nextjs": "^2.0.3",
     "@prisma/client": "^3.3.0",
     "axios": "^0.23.0",
