feat(global): actually finish jobs page

--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "@clerk/nextjs": "^2.0.3",
     "@prisma/client": "^3.4.0",
     "axios": "^0.23.0",
+    "babel-plugin-superjson-next": "^0.4.2",
     "next": "latest",
     "nodemailer": "^6.7.0",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "superjson": "^1.8.0"
   },
   "devDependencies": {
     "@types/react": "^17.0.20",
