--- a/package.json
+++ b/package.json
@@ -14,14 +14,16 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "@auth0/nextjs-auth0": "^1.6.1",
     "@prisma/client": "^3.4.0",
+    "@supabase/supabase-js": "^1.25.2",
+    "@supabase/ui": "^0.35.0",
     "axios": "^0.23.0",
     "babel-plugin-superjson-next": "^0.4.2",
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "superjson": "^1.8.0"
+    "superjson": "^1.8.0",
+    "swr": "^1.0.1"
   },
   "devDependencies": {
     "@types/react": "^17.0.33",
