--- a/package.json
+++ b/package.json
@@ -16,10 +16,11 @@
   "dependencies": {
     "@prisma/client": "^3.4.0",
     "@supabase/supabase-js": "^1.25.2",
-    "@supabase/ui": "^0.35.0",
+    "@supabase/ui": "^0.29.0",
     "axios": "^0.23.0",
     "babel-plugin-superjson-next": "^0.4.2",
     "next": "latest",
+    "next-seo": "^4.28.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "superjson": "^1.8.0",
