--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@fontsource/plus-jakarta-sans": "^4.5.0",
     "@prisma/client": "^3.4.0",
     "@supabase/supabase-js": "^1.25.2",
     "@supabase/ui": "^0.29.0",
     "axios": "^0.23.0",
     "babel-plugin-superjson-next": "^0.4.2",
+    "moment": "^2.29.1",
     "next": "latest",
     "next-seo": "^4.28.1",
     "react": "^17.0.2",
