--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "swr": "^1.0.1"
   },
   "devDependencies": {
+    "@commitlint/cli": "^15.0.0",
+    "@commitlint/config-conventional": "^15.0.0",
     "@types/react": "^17.0.33",
     "@typescript-eslint/eslint-plugin": "^4.11.1",
     "@typescript-eslint/parser": "^4.11.1",
