--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "prisma": "^3.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-social-icons": "^5.6.1",
     "superjson": "^1.8.0",
     "swr": "^1.0.1"
   },
