feat(auth): revert to supabase auth

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,4 @@ jobs:
         run: yarn install --frozen-lockfile
 
       - name: Lint ✅
-        run: yarn run lint --fix
-
-      - name: Build 🏗️
-        run: yarn run build-ci
+        run: yarn run check-lint
