--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^2.2.1",
+    "@fontsource/nunito-sans": "^4.5.1",
     "@fontsource/plus-jakarta-sans": "^4.5.0",
     "@prisma/client": "^3.5.0",
     "axios": "^0.23.0",
@@ -27,7 +28,8 @@
     "react-dom": "^17.0.2",
     "react-social-icons": "^5.6.1",
     "superjson": "^1.8.0",
-    "swr": "^1.0.1"
+    "swr": "^1.0.1",
+    "tailwind-glassmorphism": "^1.0.6"
   },
   "devDependencies": {
     "@commitlint/cli": "^15.0.0",
