refactor(db, hooks): better planned schemas + reduce fetch calls by 80%-90%

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,7 +16,8 @@
     "react/prop-types": "off",
     "@next/next/no-img-element": "off",
     "@typescript-eslint/explicit-module-boundary-types": "off",
-    "react/react-in-jsx-scope": "off"
+    "react/react-in-jsx-scope": "off",
+    "react-hook/exhaustive-deps": "off"
   },
   "settings": {
     "react": {
