--- a/package.json
+++ b/package.json
@@ -50,6 +50,6 @@
     "postcss": "^8.3.6",
     "prettier": "^2.4.1",
     "tailwindcss": "^2.2.15",
-    "typescript": "^4.4.3"
+    "typescript": "4.5.0"
   }
 }
