--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "react-social-icons": "^5.6.1",
     "superjson": "^1.8.0",
     "swr": "^1.0.1",
-    "tailwind-glassmorphism": "^1.0.6"
+    "tailwind-glassmorphism": "^1.0.6",
+    "typescript": "^4.5.4"
   },
   "devDependencies": {
     "@commitlint/cli": "^15.0.0",
@@ -49,7 +50,6 @@
     "next-sitemap": "^1.6.203",
     "postcss": "^8.3.6",
     "prettier": "^2.4.1",
-    "tailwindcss": "^2.2.15",
-    "typescript": "4.5.0"
+    "tailwindcss": "^2.2.15"
   }
 }
