--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,6 +17,7 @@
     "@next/next/no-img-element": "off",
     "@typescript-eslint/explicit-module-boundary-types": "off",
     "react/react-in-jsx-scope": "off",
+    "@next/next/no-html-link-for-pages": "off",
     "react-hook/exhaustive-deps": "off"
   },
   "settings": {
