--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,4 +22,4 @@ jobs:
         run: pnpm run check-lint
 
       - name: Build client ✅
-        run: pnpm run build
+        run: cd apps/client && pnpx prisma generate && cd ../.. && pnpm run build
