--- a/.gitignore
+++ b/.gitignore
@@ -28,7 +28,6 @@ yarn-error.log*
 # local env files
 **/.env
 **/.env.local
-**/.env.development.local
 **/.env.production.local
 
 # vercel
@@ -47,6 +46,6 @@ tsconfig.tsbuildinfo
 
 .turbo
 
-build/**
-dist/**
-.next/**
+**/build/**
+**/dist/**
+**/.next/**
