--- a/.gitignore
+++ b/.gitignore
@@ -28,7 +28,9 @@ yarn-error.log*
 # local env files
 **/.env
 **/.env.local
+**/.env.development.local
 **/.env.production.local
+!apps/client/.env.local
 
 # vercel
 .vercel
