ci: better pnpm install

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
         run: npm i -g pnpm
 
       - name: Install dependencies 🔧
-        run: pnpm install --frozen-lockfile
+        run: pnpm install
 
       - name: Lint 🖊
         run: pnpm run check-lint
