--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -25,7 +25,6 @@
     "ts-node": "10.4.0",
     "ts-node-dev": "1.1.8",
     "typegraphql-prisma": "0.18.2",
-    "typescript": "4.5.4",
-    "prismaClient": "workspace:"
+    "typescript": "4.5.4"
   }
 }
