feat: migrate to non-monorepo setup

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,10 +21,10 @@ jobs:
       - name: Lint 🖊
         run: pnpm run check-lint
 
-      - name: set env vars
+      - name: Set environment variables 🔏
         run: |
-          touch apps/client/.env
-          echo NEXT_PUBLIC_CLERK_FRONTEND_API=clerk.8bqex.mkl5j.lcl.dev >> apps/client/.env
+          touch .env
+          echo NEXT_PUBLIC_CLERK_FRONTEND_API=clerk.8bqex.mkl5j.lcl.dev >> .env
 
-      - name: Build client ✅
-        run: cd apps/client && pnpx prisma generate && cd ../.. && pnpm run build
+      - name: Build ✅
+        run: pnpx prisma generate && pnpm run build
