--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "postbuild": "next-sitemap",
     "start": "next start",
     "check-types": "tsc --pretty --noEmit",
-    "check-types": "tsc --pretty --noEmit",
     "check-format": "prettier --check .",
     "check-lint": "eslint . --ext ts --ext tsx --ext js",
     "format": "prettier --write .",
@@ -21,14 +20,15 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^2.4.4",
+    "@elastic/elasticsearch": "^7.16.0",
     "@fontsource/nunito-sans": "^4.5.1",
     "@fontsource/plus-jakarta-sans": "^4.5.0",
-    "@prisma/client": "^3.6.0",
+    "@prisma/client": "^3.7.0",
     "babel-plugin-superjson-next": "^0.4.2",
     "moment": "^2.29.1",
     "next": "latest",
     "next-transpile-modules": "^9.0.0",
-    "prisma": "^3.6.0",
+    "prisma": "^3.7.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hot-toast": "^2.1.1",
@@ -40,16 +40,12 @@
     "typescript": "^4.5.4"
   },
   "devDependencies": {
-    "@types/react": "^17.0.33",
-    "autoprefixer": "^10.3.7",
-    "next-sitemap": "^1.6.203",
-    "postcss": "^8.3.6",
-    "tailwindcss": "^2.2.15",
     "@commitlint/cli": "^15.0.0",
     "@commitlint/config-conventional": "^15.0.0",
     "@types/react": "^17.0.33",
     "@typescript-eslint/eslint-plugin": "^4.11.1",
     "@typescript-eslint/parser": "^4.11.1",
+    "autoprefixer": "^10.3.7",
     "eslint": "^7.17.0",
     "eslint-config-next": "^11.1.2",
     "eslint-plugin-prettier": "^4.0.0",
@@ -57,6 +53,9 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-webpack-plugin": "^2.4.1",
     "husky": "^7.0.0",
-    "prettier": "^2.4.1"
+    "next-sitemap": "^1.6.203",
+    "postcss": "^8.3.6",
+    "prettier": "^2.4.1",
+    "tailwindcss": "^2.2.15"
   }
 }
