--- a/package.json
+++ b/package.json
@@ -1,11 +1,7 @@
 {
   "name": "internnova",
-  "description": "The webiste for internnova.co",
+  "description": "The webiste for internnova",
   "private": true,
-  "workspaces": [
-    "apps/*",
-    "packages/*"
-  ],
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -31,6 +27,7 @@
     "prisma": "^3.7.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-google-drive-picker": "^1.1.4",
     "react-hot-toast": "^2.1.1",
     "react-social-icons": "^5.6.1",
     "superjson": "^1.8.0",
@@ -46,7 +43,7 @@
     "@typescript-eslint/eslint-plugin": "^4.11.1",
     "@typescript-eslint/parser": "^4.11.1",
     "autoprefixer": "^10.3.7",
-    "eslint": "^7.17.0",
+    "eslint": "7.0.0",
     "eslint-config-next": "^11.1.2",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.22.0",
