--- a/package.json
+++ b/package.json
@@ -54,5 +54,10 @@
     "postcss": "^8.3.6",
     "prettier": "^2.4.1",
     "tailwindcss": "^2.2.15"
+  },
+  "pnpm": {
+    "overrides": {
+      "ansi-regex@>2.1.1 <5.0.1": ">=5.0.1"
+    }
   }
 }
