--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "babel-plugin-superjson-next": "^0.4.2",
     "moment": "^2.29.1",
     "next": "latest",
+    "next-seo": "^4.28.1",
     "next-transpile-modules": "^9.0.0",
     "prisma": "^3.8.0",
     "react": "^17.0.2",
