feat(codesee): init codesee

--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,9 @@
 {
   "presets": ["next/babel"],
-  "plugins": ["superjson-next"]
+  "plugins": ["superjson-next"],
+  "env": {
+    "development": {
+      "plugins": [["@codesee/instrument", { "hosted": true }]]
+    }
+  }
 }
