--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "typescript": "^4.5.4"
   },
   "devDependencies": {
+    "@codesee/babel-plugin-instrument": "^0.175.0",
+    "@codesee/tracker": "^0.175.0",
     "@commitlint/cli": "^15.0.0",
     "@commitlint/config-conventional": "^15.0.0",
     "@types/react": "^17.0.38",
