--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -22,6 +22,12 @@ jobs:
         with:
           node-version: 14
 
+      - name: Install pnpm 
+        run: npm i -g pnpm
+
+      - name: Install dependencies 🔧
+        run: pnpm install
+
       - name: Run linters
         uses: wearerequired/lint-action@v1
         with:
