--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@elastic/elasticsearch": "^7.16.0",
     "@fontsource/chivo": "^4.5.0",
     "@fontsource/montserrat": "^4.5.3",
+    "@fontsource/nunito-sans": "^4.5.2",
     "@prisma/client": "^3.8.1",
     "babel-plugin-superjson-next": "^0.4.2",
     "moment": "^2.29.1",
