--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-google-drive-picker": "^1.1.4",
     "react-hot-toast": "^2.2.0",
     "react-loaders-kit": "^0.1.3",
+    "react-markdown": "^8.0.0",
     "react-social-icons": "^5.7.0",
     "superjson": "^1.8.0",
     "swr": "^1.1.2",
