--- a/package.json
+++ b/package.json
@@ -21,23 +21,23 @@
     "@fontsource/montserrat": "^4.5.3",
     "@fontsource/nunito-sans": "^4.5.2",
     "@prisma/client": "^3.8.1",
+    "@tailwindcss/typography": "^0.5.1",
     "babel-plugin-superjson-next": "^0.4.2",
     "moment": "^2.29.1",
     "next": "latest",
+    "next-mdx-remote": "^3.0.8",
     "next-seo": "^4.28.1",
     "next-transpile-modules": "^9.0.0",
     "prisma": "^3.8.1",
+    "raw-loader": "^4.0.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-google-drive-picker": "^1.1.4",
     "react-hot-toast": "^2.2.0",
     "react-loaders-kit": "^0.1.3",
-    "react-markdown": "^8.0.0",
     "react-social-icons": "^5.7.0",
     "superjson": "^1.8.0",
     "swr": "^1.1.2",
     "tailwind-glassmorphism": "^1.0.6",
-    "tailwindcss-border-gradient-radius": "^2.0.0",
     "typescript": "^4.5.4"
   },
   "devDependencies": {
@@ -59,7 +59,7 @@
     "next-sitemap": "^1.9.12",
     "postcss": "^8.4.5",
     "prettier": "^2.5.1",
-    "tailwindcss": "^2.2.19"
+    "tailwindcss": "^3.0.18"
   },
   "pnpm": {
     "overrides": {
