--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     ]
   },
   "dependencies": {
-    "@prisma/client": "3.9.1",
+    "@prisma/client": "latest",
     "@sendgrid/mail": "^7.6.0",
     "autoprefixer": "10.x",
     "blitz": "0.45.2",
@@ -46,7 +46,7 @@
     "prettier-plugin-prisma": "3.9.0",
     "pretty-quick": "3.1.3",
     "preview-email": "3.0.5",
-    "prisma": "3.9.1",
+    "prisma": "latest",
     "typescript": "~4.5"
   },
   "private": true,
