--- a/package.json
+++ b/package.json
@@ -24,32 +24,32 @@
     ]
   },
   "dependencies": {
-    "@prisma/client": "latest",
-    "@sendgrid/mail": "^7.6.0",
-    "autoprefixer": "10.x",
-    "blitz": "0.45.2",
+    "@prisma/client": "^3.9.2",
+    "@sendgrid/mail": "^7.6.1",
+    "autoprefixer": "^10.4.2",
+    "blitz": "^0.45.3",
     "final-form": "4.20.6",
     "next-seo": "^5.1.0",
-    "postcss": "8.x",
-    "react": "18.0.0-beta-149b420f6-20211119",
-    "react-dom": "18.0.0-alpha-5ca4b0433-20211020",
+    "postcss": "^8.4.6",
+    "react": "18.0.0-rc.0-next-fe905f152-20220107",
+    "react-dom": "18.0.0-rc.0-next-fe905f152-20220107",
     "react-final-form": "6.5.8",
-    "tailwindcss": "latest",
+    "tailwindcss": "^3.0.19",
     "zod": "3.11.6"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.4.0",
     "@types/preview-email": "2.0.1",
     "@types/react": "17.0.39",
-    "eslint": "7.32.0",
+    "eslint": "8.8.0",
     "husky": "7.0.4",
-    "lint-staged": "11.3.0-beta.2",
+    "lint-staged": "12.3.3",
     "prettier": "2.5.1",
     "prettier-plugin-prisma": "3.9.0",
     "pretty-quick": "3.1.3",
     "preview-email": "3.0.5",
-    "prisma": "latest",
-    "typescript": "~4.5"
+    "prisma": "^3.9.2",
+    "typescript": "~4.5.5"
   },
   "private": true,
   "packageManager": "yarn@3.1.1"
