Revert "Merge pull request #117 from internnova/dev-signup"
This reverts commit 8f8b0e1f85fc4a27671a02c5eef56f61382de9b2, reversing
changes made to 0606934f5d7e711ac865d5d15c72189b3467b149.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,11 +4,11 @@ on:
   push:
     branches:
       - main
-      - dev
+      - canary
   pull_request:
     branches:
       - main
-      - dev
+      - canary
 
 jobs:
   lint:
