--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-dom": "18.0.0-rc.0-next-fe905f152-20220107",
     "react-final-form": "6.5.8",
     "react-icons": "^4.3.1",
+    "sweetalert": "^2.1.2",
     "tailwindcss": "^3.0.19",
     "zod": "3.11.6"
   },
