fix(ui): better signup organisation

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
-# This env file should be checked into source control
-# This is the place for default values for all environments
-# Values in `.env.local` and `.env.production` will override these values
+DATABASE_URL="postgresql://postgres:himyNAMEIS123@@@db.fqufhsqzkwwfckekxwng.supabase.co:5432/postgres"
+SEPERATOR="I HATE MYSQL"
+NEXT_PUBLIC_CLERK_FRONTEND_API="clerk.8bqex.mkl5j.lcl.dev"
+NEXT_PUBLIC_GOOGLE_ANALYTICS="G-9DRJ0G5WMQ"
