--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "@tailwindcss/forms": "^0.4.0",
     "@types/preview-email": "2.0.1",
     "@types/react": "17.0.39",
-    "eslint": "8.8.0",
+    "eslint": "^8.10.0",
     "husky": "7.0.4",
     "lint-staged": "12.3.3",
     "prettier": "2.5.1",
