--- a/package.json
+++ b/package.json
@@ -24,36 +24,36 @@
     ]
   },
   "dependencies": {
-    "@prisma/client": "^3.9.2",
-    "@sendgrid/mail": "^7.6.1",
-    "autoprefixer": "latest",
+    "@prisma/client": "^3.10.0",
+    "@sendgrid/mail": "^7.6.2",
+    "autoprefixer": "^10.4.2",
     "blitz": "^0.45.3",
     "cloudinary-react": "^1.7.1",
     "final-form": "4.20.6",
     "next-seo": "^5.1.0",
-    "postcss": "latest",
-    "react": "18.0.0-rc.0-next-fe905f152-20220107",
-    "react-dom": "18.0.0-rc.0-next-fe905f152-20220107",
+    "postcss": "^8.4.8",
+    "react": "18.0.0-rc.2-next-b9de50d2f-20220308",
+    "react-dom": "18.0.0-rc.2-next-b9de50d2f-20220308",
     "react-final-form": "6.5.8",
     "react-icons": "^4.3.1",
     "react-loaders-kit": "^0.1.3",
     "sweetalert": "^2.1.2",
-    "tailwindcss": "latest",
-    "zod": "3.11.6"
+    "tailwindcss": "^3.0.23",
+    "zod": "3.13.4"
   },
   "devDependencies": {
-    "@tailwindcss/forms": "^0.4.0",
+    "@tailwindcss/forms": "^0.5.0",
     "@types/preview-email": "2.0.1",
-    "@types/react": "17.0.39",
-    "eslint": "^8.10.0",
+    "@types/react": "17.0.40",
+    "eslint": "^8.11.0",
     "husky": "7.0.4",
-    "lint-staged": "12.3.3",
+    "lint-staged": "12.3.5",
     "prettier": "2.5.1",
-    "prettier-plugin-prisma": "3.9.0",
+    "prettier-plugin-prisma": "3.10.0",
     "pretty-quick": "3.1.3",
     "preview-email": "3.0.5",
-    "prisma": "^3.9.2",
-    "typescript": "~4.5.5"
+    "prisma": "^3.10.0",
+    "typescript": "~4.6.2"
   },
   "private": true,
   "packageManager": "yarn@3.1.1"
