--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.4.0",
+    "@trivago/prettier-plugin-sort-imports": "^3.2.0",
     "@types/preview-email": "2.0.1",
     "@types/react": "17.0.39",
     "eslint": "^8.10.0",
