--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,7 +35,11 @@ jobs:
         run: yarn install --frozen-lockfile --silent
         env:
           CI: true
-      - name: Lint Company Dashboard
+      - name: Lint
         run: yarn lint
+        env:
+          CI: true
+      - name: Test build
+        run: yarn build
         env:
           CI: true
