--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     ]
   },
   "dependencies": {
-    "@prisma/client": "^3.9.2",
+    "@prisma/client": "latest",
     "@sendgrid/mail": "^7.6.1",
     "autoprefixer": "latest",
     "blitz": "^0.45.3",
@@ -53,7 +53,7 @@
     "prettier-plugin-prisma": "3.9.0",
     "pretty-quick": "3.1.3",
     "preview-email": "3.0.5",
-    "prisma": "^3.9.2",
+    "prisma": "latest",
     "typescript": "~4.5.5"
   },
   "private": true,
