--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "@tailwindcss/forms": "^0.4.0",
     "@trivago/prettier-plugin-sort-imports": "^3.2.0",
     "@types/preview-email": "2.0.1",
-    "@types/react": "17.0.39",
+    "@types/react": "18.0.1",
+    "@types/react-dom": "latest",
     "eslint": "^8.14.0",
     "husky": "7.0.4",
     "lint-staged": "12.3.3",
